--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "inspector": "^0.5.0",
     "react": "^16.12.0",
     "react-animated-weather": "^3.0.0",
     "react-animation": "^1.2.2",
-    "react-body-images": "^1.0.1",
     "react-dom": "^16.12.0",
-    "react-fontawesome": "^1.7.1",
+    "react-moment": "^0.9.6",
     "react-open-weather": "^0.5.2",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
