--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
     "reactstrap": "^8.1.1",
+    "serve": "^11.2.0",
     "sweetalert2-react": "^0.8.3",
     "swiper": "^5.2.1",
     "weather-icons-react": "^1.2.0"
