--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "react": "^16.12.0",
-    "react-animated-weather": "^3.0.0",
-    "react-animation": "^1.2.2",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.6",
-    "react-open-weather": "^0.5.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.6.1",
     "reactstrap": "^8.1.1",
